# dymopipe

./: .gitignore  .hie-bios  CHANGELOG.md  LICENSE  README.md  cabal.project  default.nix  dymopipe.cabal  flake.nix  hie.yaml  package.yaml  shell.nix  stack.yaml
app/: Main.hs
dymopipe/: Compile.hs  Main.hs  Options.hs  Options.hs-boot  Send.hs
dymopipe/Control/Applicative/: Lift.hs
dymopipe/Options/: Default.hs  ReadEnum.hs
nix/: Cabal.nix  build.nix  ghcide.nix  hackage-src.json  haskell-lsp-types.nix  haskell-lsp.nix  hie-bios.nix  lsp-test.nix  nix-tools.nix  sources.json  stackage-src.json
nix/ghcide-pkgs/: .stack-to-nix.cache.0  default.nix  haskell-language-server.nix
