cabal-version:       2.2
name:                dymopipe
version:             0.0.0.0
synopsis:            Pipe printing commands to a DYMO LabelWriter
description:         Pipe printing commands to a DYMO LabelWriter
homepage:            https://github.com/vkleen/dymopipe
bug-reports:         https://github.com/vkleen/dymopipe/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Viktor Kleen
maintainer:          viktor@kleen.org
copyright:           2019 Viktor Kleen
category:            Utiliity
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.6.5

source-repository head
  type:                git
  location:            https://github.com/vkleen/dymopipe.git

executable dymopipe
  hs-source-dirs:      app
  main-is:             Main.hs

  build-depends:       base ^>= 4.12.0.0, relude ^>= 0.4.0
                     , bytestring
                     , generic-lens
                     , hexquote
                     , lens
                     , mason
                     , pretty-hex
                     , usb
                     , vector
  
  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wno-type-defaults

  default-language:    Haskell2010
